Front-End finished.

--- a/src/main/resources/templates/home/locatie.html
+++ b/src/main/resources/templates/home/locatie.html
@@ -58,7 +58,7 @@
 <body class="u-body">
 <section class="u-clearfix u-section-1" id="sec-b34a">
     <p class="u-text u-text-custom-color-1 u-text-1">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-1 u-btn-1" href="#">Safety<font class="u-text-black">Band</font>
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-1 u-btn-1" th:href="@{/}">Safety<font class="u-text-black">Band</font>
         </a>
     </p>
     <p class="u-text u-text-default u-text-2">
@@ -80,6 +80,7 @@
             </p>
         </div>
     </div>
+    <br>
     <section>
         <!-- HERO -->
         <section class="u-clearfix u-image u-section-overons" id="sec-8ff2" data-image-width="1400" data-image-height="995">
@@ -197,26 +198,26 @@
                     <div class="u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-1">
                         <div class="u-container-layout u-valign-middle u-container-layout-1">
                             <a href="#"
-                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-1">Home</a>
+                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-1" th:href="@{/}">Home</a>
                         </div>
                     </div>
                     <div class="u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-2">
                         <div class="u-container-layout u-valign-middle u-container-layout-2">
                             <a href="#"
-                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-2">Over
+                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-2" th:href="@{/over-ons}">Over
                                 ons</a>
                         </div>
                     </div>
                     <div class="u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-3">
                         <div class="u-container-layout u-valign-middle u-container-layout-3">
                             <a href="#"
-                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-3">Prijzen</a>
+                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-3" th:href="@{/prijzen}">Prijzen</a>
                         </div>
                     </div>
                     <div class="u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-4">
                         <div class="u-container-layout u-valign-middle u-container-layout-4">
                             <a href="#"
-                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-4">FAQ</a>
+                               class="u-align-center u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-alt-color u-btn-4" th:href="@{/faq}">FAQ</a>
                         </div>
                     </div>
                 </div>
