--- a/src/main/resources/templates/locatie/add-locatie.html
+++ b/src/main/resources/templates/locatie/add-locatie.html
@@ -5,6 +5,7 @@
     <title>Locatie - ADD</title>
 </head>
 <body>
+<div sec:authorize="isAuthenticated()">
     <form action="#" th:action="@{/location/addlocatie}" th:object="${location}" method="post">
         <label for="breedtegraad">Breedtegraad</label>
         <input type="text" th:field="*{breedtegraad}" id="breedtegraad" placeholder="Breedtegraad">
@@ -40,5 +41,6 @@
 
         <input type="submit" value="Update Locatie">
     </form>
+</div>
 </body>
 </html>
