--- a/src/main/resources/templates/locatie/update-locatie.html
+++ b/src/main/resources/templates/locatie/update-locatie.html
@@ -5,6 +5,7 @@
     <title>Locatie - UPDATE</title>
 </head>
 <body>
+<div sec:authorize="isAuthenticated()">
 <form action="#" th:action="@{/location/update/{id}(id=${location.id})}" th:object="${location}" method="post">
     <label for="breedtegraad">Breedtegraad</label>
     <input type="text" th:field="*{breedtegraad}" id="breedtegraad" placeholder="Breedtegraad">
@@ -40,5 +41,6 @@
 
     <input type="submit" value="Update Locatie">
 </form>
+</div>
 </body>
 </html>
